--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,27 @@ body {
 }
 
 a {
+  position: relative;
+  top: 0;
   color: inherit;
   text-decoration: none;
+  transition: top ease 0.15s;
+}
+
+a:hover {
+  top: 2px
+}
+
+h1 {
+  font-weight: 600;
+}
+
+h2 {
+  font-weight: 500;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 @media (prefers-color-scheme: dark) {
