--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,16 @@
 :root {
   --foreground-rgb: 14, 19, 20;
   --backgroundrgb: 214, 219, 220;
+  --yellow: #ca8a04;
+  --blue: #1e40af;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 214, 219, 220;
     --background-rgb: 14, 19, 20;
+    --yellow: #facc15;
+    --blue: #a5b4fc;
   }
 }
 
@@ -24,27 +28,19 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-rgb));
+  background: var(--background-rgb);
 }
 
 a {
   position: relative;
   top: 0;
-  color: inherit;
+  color: var(--blue);
   text-decoration: none;
   transition: top ease 0.15s;
 }
 
 a:hover {
   top: 2px
-}
-
-h1 {
-  font-weight: 600;
-}
-
-h2 {
-  font-weight: 500;
 }
 
 a:hover {
