--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,7 +3,33 @@
   flex-direction: column;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+}
+
+.banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background-color: var(--yellow);
+}
+
+.firstName {
+  color: var(--yellow);
+  font-weight: 800;
+  font-size: 2.5rem;
+  margin-bottom: -0.85rem;
+  letter-spacing: -0.1rem;
+}
+
+.lastName {
+  font-weight: 700;
+  font-size: 2.25rem;
+  margin-bottom: 1rem;
+}
+
+.biLine {
+  font-weight: 700;
 }
 
 .title {
@@ -11,18 +37,24 @@
 }
 
 .socials {
+  border-top: 1px dotted var(--yellow);
+  padding-top: 1rem;
   margin: 1rem auto;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .bio {
   width: 50%;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   margin: 1rem;
-  line-height: 1.75rem;
+  line-height: 2rem;
 }
 
 .socials a {
   margin: 0 1rem;
+  font-weight: 700;
 }
 
 @media only screen and (max-width: 600px) {
@@ -32,5 +64,14 @@
 
   .bio {
     width: 95%;
+  }
+
+  .socials {
+    flex-direction: column;
+    width: 95%;
+  }
+
+  .socials a {
+    margin: 0.5rem auto;
   }
 }
