--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6rem;
+  padding: 5rem;
+}
+
+.pfp {
+  border-radius: 50%;
+  margin-bottom: 1.5rem;
 }
 
 .banner {
