--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -92,6 +92,10 @@
   padding-right: 0.5rem;
 }
 
+.ossProjects a:hover svg {
+  text-decoration: none;
+}
+
 @media only screen and (min-width: 600px) {
   .main {
     padding: 5rem;
