Fix SEO and darken light theme Yellow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   --foreground-rgb: 14, 19, 20;
   --backgroundrgb: 214, 219, 220;
-  --yellow: #ca8a04;
+  --yellow: #b38600;
   --blue: #1e40af;
 }
 
