--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,16 +21,13 @@
 
 .firstName {
   color: var(--yellow);
-  font-weight: 800;
-  font-size: 2.5rem;
-  margin-bottom: -0.85rem;
-  letter-spacing: -0.1rem;
 }
 
-.lastName {
+.name {
   font-weight: 700;
   font-size: 2.25rem;
   margin-bottom: 1rem;
+  text-transform: uppercase;
 }
 
 .biLine {
