--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
   --backgroundrgb: 214, 219, 220;
   --yellow: #b38600;
   --blue: #1e40af;
+  --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,6 +25,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--system-ui);
 }
 
 body {
@@ -36,11 +38,6 @@ a {
   top: 0;
   color: var(--blue);
   text-decoration: none;
-  /* transition: top ease 0.15s; */
-}
-
-a:hover {
-  /* top: 2px */
 }
 
 a:hover {
