--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,9 @@
-:root {
-  --foreground-rgb: 14, 19, 20;
-  --backgroundrgb: 214, 219, 220;
-  --yellow: #b38600;
-  --blue: #1e40af;
-  --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 214, 219, 220;
-    --background-rgb: 14, 19, 20;
-    --yellow: #facc15;
-    --blue: #a5b4fc;
-  }
+:root {
+  --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 * {
@@ -23,25 +14,7 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   font-family: var(--system-ui);
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: var(--background-rgb);
-}
-
-a {
-  position: relative;
-  top: 0;
-  color: var(--blue);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 @media (prefers-color-scheme: dark) {
