--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,10 +25,15 @@
 html,
 body {
   font-family: var(--system-ui);
+  @apply bg-indigo-500;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+
+  html, body {
+    @apply bg-indigo-900;
   }
 }
