--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -18,6 +18,14 @@
       1px 5px 5px hsla(0, 0%, 0%, 0.5);
 }
 
+.textShadowSmall {
+  text-shadow:
+      1px 1px 0 var(--yellow-300),
+      1px 2px 0 var(--yellow-600),
+      1px 3px 3px hsla(0, 0%, 0%, 0.5);
+}
+
+
 .boxShadow {
   box-shadow:
       1px 1px 0 var(--yellow-400),
