--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,33 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "SharpGrotesk-Book";
+  src: url('/fonts/book.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: "SharpGrotesk-Bold";
+  src: url('/fonts/bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: "SharpGrotesk-Medium-Narrow";
+  src: url('/fonts/medium-narrow.woff2') format('woff2');
+}
+
 :root {
-  --foreground-rgb: 14, 19, 20;
-  --backgroundrgb: 214, 219, 220;
-  --yellow: #b38600;
-  --blue: #1e40af;
-  --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --slate-800: theme('colors.slate.800');
+  --yellow-800: theme('colors.yellow.800');
+  --yellow-700: theme('colors.yellow.700');
+  --yellow-600: theme('colors.yellow.600');
+  --yellow-500: theme('colors.yellow.500');
+  --yellow-400: theme('colors.yellow.400');
+  --yellow-300: theme('colors.yellow.300');
+  --yellow-200: theme('colors.yellow.200');
+  --yellow-100: theme('colors.yellow.100');
+  --yellow-50: theme('colors.yellow.50');
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,25 +47,12 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: var(--system-ui);
+  @apply font-copy;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: var(--background-rgb);
-}
-
-a {
-  position: relative;
-  top: 0;
-  color: var(--blue);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
+  @apply bg-gradient-to-b from-slate-300 to-white;
+  @apply min-h-screen;
 }
 
 @media (prefers-color-scheme: dark) {
