--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -6,5 +6,5 @@
       1px 4px 0 var(--yellow-700),
       0 1px 8px hsla(0, 0%, 0%, 0.33),
       2px 5px 3px hsla(0, 0%, 0%, 0.5),
-      0 3px 60px var(--slate-800);
+      0 3px 60px var(--3d-text-shadow);
 }
