--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -8,3 +8,29 @@
       2px 5px 3px hsla(0, 0%, 0%, 0.5),
       0 3px 60px var(--3d-text-shadow);
 }
+
+.tab::before {
+  @apply dark:bg-slate-600 bg-slate-700 h-1 -z-10 w-full;
+  @apply absolute bottom-0 left-0 rounded-full;
+  content: "";
+  transform: scaleX(0);
+  transition: transform 400ms ease-out;
+}
+
+@media (prefers-reduced-motion) {
+  .tab::before {
+    transition: none;
+  }
+}
+
+.tab:nth-of-type(1)::before {
+  transform-origin: right;
+}
+
+.tab:nth-of-type(2)::before {
+  transform-origin: left;
+}
+
+.tab.selected::before {
+  transform: scaleX(1);
+}
