--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -4,9 +4,19 @@
       1px 2px 0 var(--yellow-600),
       1px 3px 0 var(--yellow-600),
       1px 4px 0 var(--yellow-700),
-      0 1px 8px hsla(0, 0%, 0%, 0.33),
-      2px 5px 3px hsla(0, 0%, 0%, 0.5),
-      0 3px 60px var(--3d-text-shadow);
+      0 1px 25px hsla(0, 0%, 0%, 0.42),
+      2px 5px 3px hsla(0, 0%, 0%, 0.67);
+}
+
+@media (prefers-color-scheme: dark) {
+  .textShadow {
+    text-shadow: 1px 1px 0 var(--yellow-300),
+    1px 2px 0 var(--yellow-600),
+    1px 3px 0 var(--yellow-600),
+    1px 4px 0 var(--yellow-700),
+    0 1px 13px hsla(0, 0%, 0%, 0.25),
+    2px 5px 3px hsla(0, 0%, 0%, 0.33);
+  }
 }
 
 .tab::before {
