--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,30 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Tasa Orbiter VF";
-  src: url('/fonts/tasa-vf.woff2') format('woff2');
+  font-family: "CraftworkGrotesk";
+  src: url('/fonts/CraftworkGrotesk-Medium.woff2') format('woff2');
+  font-weight: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "CraftworkGrotesk";
+  src: url('/fonts/CraftworkGrotesk-Heavy.woff2') format('woff2');
+  font-weight: 800;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "CraftworkGrotesk";
+  src: url('/fonts/CraftworkGrotesk-Bold.woff2') format('woff2');
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "CraftworkGrotesk";
+  src: url('/fonts/CraftworkGrotesk-SemiBold.woff2') format('woff2');
+  font-weight: 500;
   font-display: swap;
 }
 
@@ -15,16 +37,13 @@
     font-variation-settings: 'wght' 533, 'opsz' 24;
   }
   .font-semibold {
-    font-weight: normal;
-    font-variation-settings: 'wght' 600, 'opsz' 32;
+    font-weight: 500
   }
   .font-bold {
-    font-weight: normal;
-    font-variation-settings: 'wght' 700, 'opsz' 60;
+    font-weight: 600;
   }
   .font-black {
-    font-weight: normal;
-    font-variation-settings: 'wght' 750, 'opsz' 60;
+    font-weight: 800;
   }
 }
 
