Add titles to links.

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -10,7 +10,12 @@ import { containerSelectors } from "./GlobalStyles.astro"
     "items-center justify-start text-xl",
   ]}
 >
-  <a class="group" href="https://www.github.com/carloskelly13" target="_blank">
+  <a
+    title="GitHub"
+    class="group"
+    href="https://www.github.com/carloskelly13"
+    target="_blank"
+  >
     <Icon
       name="fa-brands:github"
       slot="icon"
@@ -18,6 +23,7 @@ import { containerSelectors } from "./GlobalStyles.astro"
     />
   </a>
   <a
+    title="LinkedIn"
     class="group"
     href="https://www.linkedin.com/in/carlos-kelly-a10270b8/"
     target="_blank"
@@ -29,6 +35,7 @@ import { containerSelectors } from "./GlobalStyles.astro"
     />
   </a>
   <a
+    title="Instagram"
     class="group"
     href="https://www.instagram.com/carloskelly.13"
     target="_blank"
@@ -39,7 +46,12 @@ import { containerSelectors } from "./GlobalStyles.astro"
       class="h-6 inline group-hover:scale-110 transition-transform"
     />
   </a>
-  <a class="group" href="https://x.com/carloskelly_13" target="_blank">
+  <a
+    title="X"
+    class="group"
+    href="https://x.com/carloskelly_13"
+    target="_blank"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
