--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -5,6 +5,7 @@ import { containerSelectors, headerSelectors } from "./GlobalStyles.astro"
 <section class:list={[containerSelectors, "mt-10"]}>
   <h2 class:list={[headerSelectors, "mb-6"]}>Tech Stack</h2>
   <p>
-    React, Node, TypeScript, Swift, Kotlin, Headless CMS, Next.js, Astro, Remix
+    React, Node, TypeScript, Swift, Kotlin, GraphQL, Headless CMS, Next.js,
+    Astro, Remix, Angular, UIKit
   </p>
 </section>
