--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Link from "../components/Link.astro"
 import GlobalStyles, {
   containerSelectors,
-  headerSelectors,
 } from "../components/GlobalStyles.astro"
 import OpenSource from "../components/OpenSource.astro"
 import WorkHistory from "../components/WorkHistory.astro"
@@ -17,6 +16,7 @@ import Links from "../components/Links.astro"
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#facc15" />
     <meta name="description" content="Personal webpage for Carlos Kelly." />
     <GlobalStyles />
     <title>Carlos Kelly</title>
@@ -29,22 +29,26 @@ import Links from "../components/Links.astro"
           "flex flex-col items-start justify-center relative",
         ]}
       >
-        <div class="flex flex-row items-center gap-5 mt-8 md:mt-14">
+        <div class="flex flex-row items-center gap-4 md:gap-6 mt-12 md:mt-20">
           <img
-            class="rounded-full h-24 w-24"
+            class="rounded-full h-24 w-24 md:h-28 md:w-28"
             src="/carlos.jpg"
             alt="Carlos Kelly Profile Image"
           />
-          <div>
+          <div class="flex flex-col gap-2">
             <h1
-              class="text-2xl md:text-4xl tracking-tighter font-bold text-yellow-500"
+              class:list={[
+                "text-3xl md:text-4xl tracking-tighter font-bold -ml-0.5 text-transparent",
+                "bg-clip-text bg-gradient-to-r from-yellow-600 to-yellow-700",
+                "bg-clip-text bg-gradient-to-r dark:from-yellow-400 dark:to-yellow-500",
+              ]}
             >
               Carlos Kelly
             </h1>
-            <h2 class:list={[headerSelectors]}>Software Engineer & CTO</h2>
+            <Links />
           </div>
         </div>
-        <p class="text-lg md:text-xl text-left my-10 !leading-relaxed">
+        <p class="text-lg md:text-xl text-left mt-10 mb-4 !leading-relaxed">
           I’m a software engineer building web and native apps. I enjoy both
           leading product engineering teams and being hands-on and building
           software. I’m the CTO at
@@ -57,7 +61,6 @@ import Links from "../components/Links.astro"
         </p>
       </section>
 
-      <Links />
       <TechStack />
       <OpenSource />
       <WorkHistory />
