Clean up packages, update light mode background color.

--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -23,7 +23,7 @@ export const headerSelectors =
 
   html,
   body {
-    @apply bg-white dark:bg-stone-800;
+    @apply bg-stone-100 dark:bg-stone-800;
     @apply text-stone-950 dark:text-stone-300;
     font-family: "sans", sans-serif;
   }
