--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions"
 import Link from "../components/Link.astro"
 import GlobalStyles, {
   containerSelectors,
@@ -7,18 +8,12 @@ import OpenSource from "../components/OpenSource.astro"
 import WorkHistory from "../components/WorkHistory.astro"
 import TechStack from "../components/TechStack.astro"
 import Links from "../components/Links.astro"
+import CommonHead from "../components/CommonHead.astro"
 ---
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#facc15" />
-    <meta name="description" content="Personal webpage for Carlos Kelly." />
-    <GlobalStyles />
+    <CommonHead />
     <title>Carlos Kelly</title>
   </head>
   <body>
