--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,13 +46,7 @@ import CommonHead from "../components/CommonHead.astro"
         <p class="text-lg md:text-xl text-left mt-10 mb-4 !leading-relaxed">
           I’m a software engineer building web and native apps. I enjoy both
           leading product engineering teams and being hands-on and building
-          software. I’m the CTO at
-
-          <Link href="https://formidable.com" target="_blank">
-            Formidable<span slot="post-arrow">,</span>
-          </Link>
-           a global design, product, and engineering consultancy with a focus on
-          open-source software.
+          software.
         </p>
       </section>
 
