--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,12 @@ import CommonHead from "../components/CommonHead.astro"
         <p class="text-lg md:text-xl text-left mt-10 mb-4 !leading-relaxed">
           I’m a software engineer building web and native apps. I enjoy both
           leading product engineering teams and being hands-on and building
-          software.
+          software. I’m a Staff Software Engineer and Head of Delivery at
+          <Link href="https://formidable.com" target="_blank">
+            NearForm<span slot="post-arrow">,</span>
+          </Link>
+           a global design, product, and engineering consultancy with a focus on
+          open-source software.
         </p>
       </section>
 
