--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import CommonHead from "../components/CommonHead.astro"
           I’m a software engineer building web and native apps. I enjoy both
           leading product engineering teams and being hands-on and building
           software. I’m a Staff Software Engineer and Head of Delivery at
-          <Link href="https://formidable.com" target="_blank">
+          <Link href="https://nearform.com" target="_blank">
             NearForm<span slot="post-arrow">,</span>
           </Link>
            a global design, product, and engineering consultancy with a focus on
