Update job history.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import CommonHead from "../components/CommonHead.astro"
         <div class="flex flex-row items-center gap-4 md:gap-6 mt-12 md:mt-20">
           <img
             class="rounded-full h-24 w-24 md:h-28 md:w-28"
-            src="/carlos.jpg"
+            src="/carlos_kelly_s.webp"
             alt="Carlos Kelly Profile Image"
           />
           <div class="flex flex-col gap-2">
@@ -46,12 +46,11 @@ import CommonHead from "../components/CommonHead.astro"
         <p class="text-lg md:text-xl text-left mt-10 mb-4 !leading-relaxed">
           I’m a software engineer building web and native apps. I enjoy both
           leading product engineering teams and being hands-on and building
-          software. I’m a Staff Software Engineer and Head of Delivery at
-          <Link href="https://nearform.com" target="_blank">
-            NearForm<span slot="post-arrow">,</span>
-          </Link>
-           a global design, product, and engineering consultancy with a focus on
-          open-source software.
+          software. I’m a CTO and Head of Delivery at
+          <Link href="https://formidable.com" target="_blank">
+            Formidable<span slot="post-arrow"></span>
+          </Link>, a NearForm company, a global design, product, and engineering
+          consultancy with a focus on open-source software.
         </p>
       </section>
 
