--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,9 +44,11 @@ import CommonHead from "../components/CommonHead.astro"
           </div>
         </div>
         <p class="text-lg md:text-xl text-left mt-10 mb-4 !leading-relaxed">
-          I’m a software engineer building web and native apps. I enjoy both
-          leading product engineering teams and being hands-on and building
-          software. I’m a CTO and Head of Delivery at
+          I’m a full-stack software engineer and open-source software maintainer
+          with over 15 years of experience, building apps using web and native
+          platform technologies. My background is leading engineering teams and
+          organizations to build and ship performant, accessible, and scalable
+          software applications. I’m a Staff Software Engineer and CTO at
           <Link href="https://formidable.com" target="_blank">
             Formidable<span slot="post-arrow"></span>
           </Link>, a NearForm company, a global design, product, and engineering
