Add Multiple to Work History and Bio.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,11 +51,11 @@ import carlosImg from "../assets/carlos.png"
           with over 15 years of experience, building apps using web and native
           platform technologies. My background is leading engineering teams and
           organizations to build and ship performant, accessible, and scalable
-          software applications. I’m a Staff Software Engineer and CTO at
-          <Link href="https://formidable.com" target="_blank">
-            Formidable<span slot="post-arrow"></span>
-          </Link>, a NearForm company, a global design, product, and engineering
-          consultancy with a focus on open-source software.
+          software applications. I’m a Principal Software Engineer at
+          <Link href="https://multiple.dev" target="_blank">
+            Multiple<span slot="post-arrow"></span>
+          </Link>, a developer-centric platform for load testing across your app
+          stack.
         </p>
       </section>
 
