--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -6,6 +6,6 @@ import { containerSelectors, headerSelectors } from "./GlobalStyles.astro"
   <h2 class:list={[headerSelectors, "mb-6"]}>Tech Stack</h2>
   <p>
     React, React Native, Node, TypeScript, Swift, Kotlin, GraphQL, Headless CMS,
-    Next.js, Astro, Remix, Angular, UIKit
+    Next.js, Astro, Remix, Angular, UIKit, AWS, Docker
   </p>
 </section>
