Clean up descriptions.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,11 +51,11 @@ import carlosImg from "../assets/carlos.png"
           with over 15 years of experience, building apps using web and native
           platform technologies. My background is leading engineering teams and
           organizations to build and ship performant, accessible, and scalable
-          software applications. I’m a Principal Software Engineer at
+          software applications. I’m a software engineer at
           <Link href="https://multiple.dev" target="_blank">
-            Multiple<span slot="post-arrow"></span>
-          </Link>, a developer-centric platform for load testing across your app
-          stack.
+            Multiple<span slot="post-arrow">,</span>
+          </Link>a developer-centric load test platform that can test anything
+          across your stack.
         </p>
       </section>
 
