Update images and content.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import carlosImg from "../assets/carlos.png"
                 "bg-clip-text bg-gradient-to-r dark:from-yellow-400 dark:to-yellow-500",
               ]}
             >
-              Carlos Kelly
+              Carlos Kelly&nbsp;
             </h1>
             <Links />
           </div>
