--- a/src/components/OpenSource.astro
+++ b/src/components/OpenSource.astro
@@ -7,7 +7,10 @@ const repos = await getGitHubRepos()
 ---
 
 <section class:list={[containerSelectors, "mt-10"]}>
-  <h2 class:list={[headerSelectors, "mb-6"]}>Open Source</h2>
+  <h2 class:list={[headerSelectors, "mb-1"]}>Open Source</h2>
+  <h3 class="mb-6 text-md">
+    Projects I have maintained, built, and contributed to over my career.
+  </h3>
   <div class="flex flex-col gap-6">
     {
       repos.map(repo => (
