--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -4,8 +4,8 @@ import { containerSelectors, headerSelectors } from "./GlobalStyles.astro"
 
 <section class:list={[containerSelectors, "mt-10"]}>
   <h2 class:list={[headerSelectors, "mb-1"]}>Tech Stack</h2>
-  <p>
-    React, React Native, Node, TypeScript, Swift, Kotlin, GraphQL, Headless CMS,
+  <p class="text-lg">
+    React, React Native, Node, Express, Nest.js, TypeScript, Swift, Kotlin, GraphQL, Headless CMS,
     Next.js, Astro, Remix, Angular, UIKit, AWS, Docker
   </p>
 </section>
