--- a/src/components/OpenSource.astro
+++ b/src/components/OpenSource.astro
@@ -8,7 +8,7 @@ const repos = await getGitHubRepos()
 
 <section class:list={[containerSelectors, "mt-10"]}>
   <h2 class:list={[headerSelectors, "mb-1"]}>Open Source</h2>
-  <h3 class="mb-6 text-md">
+  <h3 class="mb-6 text-lg">
     Projects I have maintained, built, and contributed to over my career.
   </h3>
   <div class="flex flex-col gap-6">
@@ -18,7 +18,7 @@ const repos = await getGitHubRepos()
           <Link href={repo.url} target="_blank">
             {repo.name}
           </Link>
-          <div class="mb-2 text-sm">{repo.description}</div>
+          <div class="mb-2 text-base">{repo.description}</div>
         </div>
       ))
     }
