⚡️ Commit from Jolt AI ⚡️

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import carlosImg from "../assets/carlos.jpg"
                 "bg-clip-text bg-gradient-to-r dark:from-yellow-400 dark:to-yellow-500",
               ]}
             >
-              Carlos Kelly&nbsp;
+              Carlos Antonio Kelly&nbsp;
             </h1>
             <Links />
           </div>
