--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,8 @@ import carlosImg from "../assets/carlos.jpg"
           organizations to build and ship performant, accessible, and scalable
           software applications. I’m a software engineer at
           <Link href="https://multiple.dev" target="_blank">
-            Multiple<span slot="post-arrow">,</span>
-          </Link>a developer-centric load test platform that can test anything
-          across your stack.
+            Jolt AI<span slot="post-arrow">,</span>
+          </Link>an AI codegen tool that generates a file-by-file plan or lets you chat with your codebase.
         </p>
       </section>
 
